--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,25 @@
 {
-  "name": "moe/font-awesome",
+  "name": "a2nt/silverstripe-font-awesome",
   "description": "A simple form field for selecting font-awesome classes in the CMS.",
   "keywords": [
-    "font-awesome"
+    "font-awesome",
+    "silverstripe"
   ],
   "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Chris Turner",
       "email": "chris.turner@minedu.govt.nz"
+    },
+    {
+      "name": "Tony Air",
+      "email": "tony@twma.pro"
     }
   ],
   "type": "silverstripe-module",
   "require": {
-    "silverstripe/framework": ">=3.1.0",
-    "silverstripe/cms": ">=3.1.0"
+    "silverstripe/framework": ">=4",
+    "silverstripe/cms": ">=4"
   },
   "minimum-stability": "dev"
 }
