--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     }],
     "type": "silverstripe-vendormodule",
     "require": {
-        "silverstripe/framework": ">=5",
-        "silverstripe/cms": ">=5"
-    },    
+        "silverstripe/framework": "^6",
+        "silverstripe/cms": "^6"
+    },
     "extra": {
         "installer-name": "font-awesome-field",
         "expose": [
